name:                expiring-cache-map
version:             0.0.5.0
synopsis:            General purpose simple caching.
description:         
    A simple general purpose shared state cache map with automatic expiration 
    of values, for caching the results of accessing a resource such as reading 
    a file. With variations for Ord and Hashable keys using "Data.Map.Strict"
    and "Data.HashMap.Strict", respectively.

homepage:            https://github.com/elblake/expiring-cache-map
bug-reports:         https://github.com/elblake/expiring-cache-map/issues
license:             BSD3
license-file:        LICENSE
author:              Edward L. Blake
maintainer:          edwardlblake@gmail.com
copyright:           (c) 2014 Edward L. Blake
category:            Caching
build-type:          Simple
cabal-version:       >=1.8

extra-source-files:
    README.md

library
  exposed-modules:
    Caching.ExpiringCacheMap.OrdECM
    Caching.ExpiringCacheMap.HashECM
    Caching.ExpiringCacheMap.Internal.Internal
    Caching.ExpiringCacheMap.Internal.Types
    Caching.ExpiringCacheMap.Types
    Caching.ExpiringCacheMap.Utils.TestSequence
    Caching.ExpiringCacheMap.Utils.Types
  -- other-modules:       
  build-depends:       
    base == 4.*,
    containers >= 0.5.0.0,
    hashable >= 1.0.1.1 && < 1.2,
    unordered-containers >= 0.2.0.0

--    Test/TestHashECMWithThreads.hs
--    Test/TestOrdECMWithThreads.hs
--  build-depends:       
--     bytestring >= 0.10.0.0,
--     time >= 1.0
